# esquery-grep

./: .gitignore  .pinact.yaml  README.md  package.json  renovate.json5  tsconfig.json
.github/workflows/: ci.yml  publish-npm.yml  workflow-lint.yml
crates/esquery-cli/: Cargo.toml
crates/esquery-cli/src/: main.rs
crates/esquery-grep/: Cargo.toml
crates/esquery-grep/src/: main.rs
crates/esquery-grep/tests/: e2e.rs
crates/esquery-grep/tests/fixtures/: app.js  component.tsx  utils.ts
crates/esquery-json/: Cargo.toml
crates/esquery-json/src/: lib.rs  matcher.rs
crates/esquery-json/tests/: match_fn.rs  matches_fn.rs  query_attribute.rs  query_class.rs  query_complex.rs  query_compound.rs  query_descendant.rs  query_field.rs  query_has.rs  query_matches.rs  query_not.rs  query_pseudo_child.rs  query_subject.rs  query_type.rs  query_wildcard.rs  regression_codex_review.rs
crates/esquery-json/tests/common/: mod.rs
crates/esquery-json/tests/fixtures/: allClasses.json  bigArray.json  conditional.json  conditionalLong.json  forLoop.json  literal.json  literalSlash.json  nestedFunctions.json  simpleFunction.json  simpleProgram.json  switchStatement.json  whileLoop.json
crates/esquery-napi/: Cargo.toml  package.json
crates/esquery-napi/src/: lib.rs
crates/esquery-oxc/: Cargo.toml
crates/esquery-oxc/src/: lib.rs
crates/esquery-rs/: Cargo.toml
crates/esquery-rs/src/: lib.rs
crates/esquery-selector/: Cargo.toml
crates/esquery-selector/src/: ast.rs  lib.rs  parser.rs
example/: index.js  index.ts
npm/: README.md  package.json
scripts/: build-wasm.sh
src/: cli.ts  index.ts
