[package]
name = "esquery-napi"
version = "0.1.0"
edition = "2021"
description = "Node.js NAPI bindings for esquery-rs"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
esquery-rs = { path = "../esquery-rs" }
napi = "3.8.3"
napi-derive = "3.5.2"

[build-dependencies]
napi-build = "1.2.1"
