[package]
name = "esquery-rs"
version = "0.1.0"
edition = "2024"
description = "ESQuery matching for JavaScript/TypeScript ASTs"
license = "MIT"

[dependencies]
esquery-selector = { path = "../esquery-selector" }
esquery-json = { path = "../esquery-json" }
oxc_parser = "0.135.0"
oxc_ast = { version = "0.135.0", features = ["serialize"] }
oxc_allocator = "0.135.0"
oxc_span = { version = "0.135.0", features = ["serialize"] }
serde_json = "1.0.150"

[dev-dependencies]
